tests/expectations/compiler/dynamic_dispatch/dynamic_mapping_get_or_use_wrong_arg_count_fail.out
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:13:20
     |
  13 |     let val: u64 = Bank@(target)::balances.get_or_use(key);
     |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
